crates/test-generator/tests/snapshots/tsx/test_generated_generic_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value10: Array<number> = [1, 2, 3];

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value10")
      type: (type_annotation
        (generic_type
          name: (type_identifier "Array")
          type_arguments: (type_arguments
            (predefined_type "number")
          )
        )
      )
      value: (array
        (number "1")
        (number "2")
        (number "3")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value10", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:16 to 1:21 }, name: "Array", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
