crates/test-generator/tests/snapshots/tsx/test_generated_import_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
import { Item } from './module'

AST:
(program
  (import_statement
    (import_clause
      (named_imports
        (import_specifier
          name: (identifier "Item")
        )
      )
    )
    source: (string
      (string_fragment)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Item",
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 14,
            },
            definition_type: ImportDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Item",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 14,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
