crates/test-generator/tests/snapshots/tsx/test_generated_interface_declaration.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
interface TestInterface { prop: number; method2(): void; }

AST:
(program
  (interface_declaration
    name: (type_identifier "TestInterface")
    body: (interface_body
      (property_signature
        name: (property_identifier "prop")
        type: (type_annotation
          (predefined_type "number")
        )
      )
      (method_signature
        name: (property_identifier "method2")
        parameters: (formal_parameters)
        return_type: (type_annotation
          (predefined_type "void")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:11 to 1:24 }, name: "TestInterface", definition_type: InterfaceDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:27 to 1:31 }, name: "prop", definition_type: PropertyDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:41 to 1:48 }, name: "method2", definition_type: MethodDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
