crates/test-generator/tests/snapshots/tsx/test_generated_intersection_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value12: { a: number } & { b: string } = { a: 42, b: 'test' };

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "value12")
      type: (type_annotation
        (intersection_type
          (object_type
            (property_signature
              name: (property_identifier "a")
              type: (type_annotation
                (predefined_type "number")
              )
            )
          )
          (object_type
            (property_signature
              name: (property_identifier "b")
              type: (type_annotation
                (predefined_type "string")
              )
            )
          )
        )
      )
      value: (object
        (pair
          key: (property_identifier "a")
          value: (number "42")
        )
        (pair
          key: (property_identifier "b")
          value: (string
            (string_fragment)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "value12", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:18 to 1:19 }, name: "a", definition_type: PropertyDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:34 to 1:35 }, name: "b", definition_type: PropertyDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
