crates/test-generator/tests/snapshots/tsx/test_generated_jsx_attribute.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <div prop1={value13}>Content</div>;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "element")
      value: (jsx_element
        open_tag: (jsx_opening_element
          name: (identifier "div")
          attribute: (jsx_attribute
            (property_identifier "prop1")
            (jsx_expression
              (identifier "value13")
            )
          )
        )
        (jsx_text)
        close_tag: (jsx_closing_element
          name: (identifier "div")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "element", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:18 to 1:21 }, name: "div", kind: Identifier, context: None },
        Usage { position: { 1:22 to 1:27 }, name: "prop1", kind: FieldExpression, context: None },
        Usage { position: { 1:29 to 1:36 }, name: "value13", kind: Identifier, context: None },
        Usage { position: { 1:47 to 1:50 }, name: "div", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
