crates/test-generator/tests/snapshots/tsx/test_generated_jsx_closing_element.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <Component>Content</Component>

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "element")
      value: (jsx_element
        open_tag: (jsx_opening_element
          name: (identifier "Component")
        )
        (jsx_text)
        close_tag: (jsx_closing_element
          name: (identifier "Component")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Component",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 27,
            },
        },
        Usage {
            name: "Component",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 37,
                end_line: 1,
                end_column: 46,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
