crates/test-generator/tests/snapshots/tsx/test_generated_jsx_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <div>{value14}</div>;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "element")
      value: (jsx_element
        open_tag: (jsx_opening_element
          name: (identifier "div")
        )
        (jsx_expression
          (identifier "value14")
        )
        close_tag: (jsx_closing_element
          name: (identifier "div")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:14 }, name: "element", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:18 to 1:21 }, name: "div", kind: Identifier, context: None },
        Usage { position: { 1:23 to 1:30 }, name: "value14", kind: Identifier, context: None },
        Usage { position: { 1:33 to 1:36 }, name: "div", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
