crates/test-generator/tests/snapshots/tsx/test_generated_jsx_opening_element.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <Component1 prop2={value15}></Component1>

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "element")
      value: (jsx_element
        open_tag: (jsx_opening_element
          name: (identifier "Component1")
          attribute: (jsx_attribute
            (property_identifier "prop2")
            (jsx_expression
              (identifier "value15")
            )
          )
        )
        close_tag: (jsx_closing_element
          name: (identifier "Component1")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Component1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 28,
            },
        },
        Usage {
            name: "prop2",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 29,
                end_line: 1,
                end_column: 34,
            },
        },
        Usage {
            name: "value15",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 36,
                end_line: 1,
                end_column: 43,
            },
        },
        Usage {
            name: "Component1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 47,
                end_line: 1,
                end_column: 57,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
